# Seeta-OpenCVTest

./: .gitignore  CMakeLists.txt  README.md
include/: Struct_cv.h
include/libtiff/: tif_config.h  tiffconf.h
include/seetaface2/FaceLandmarker/seeta/: graphics2d.h
include/seetaface2/FaceRecognizer/seeta/: CommonStruct.h  FaceRecognizerPrivate.h
src/: main.cpp  testdb.cpp
tester/: Seeta.db
